--- a/web/app/views/users/show.html.erb
+++ b/web/app/views/users/show.html.erb
@@ -53,16 +53,22 @@
   <section class="me-section">
     <div class="me-section__inner">
       <h2 class="me-section__title">Tópicos que <%= current_user == @user ? 'você' : @user.first_name %> segue</h2>
-      <div class="me-chip-set__wrapper">
-        <div class="me-chip-set mdc-chip-set">
-          <% @user.following_topics.sort_by { |topic| topic.events.active.size }.reverse!.each do |topic| %>
-            <a href="<%= link_to_topic topic %>" class="me-chip mdc-chip <%= 'new' if topic.events.active.any? { |event| @user.last_sign_in_at < event.created_at } %>">
-              <%= topic.details_name.titleize %>
-              <i class="me-chip__counter"><%= topic.events.active.size %></i>
-            </a>
-          <% end %>
+      <% if @user.following_topics.present? %>
+        <div class="me-chip-set__wrapper">
+          <div class="me-chip-set mdc-chip-set">
+            <% @user.following_topics.sort_by { |topic| topic.events.active.size }.reverse!.each do |topic| %>
+              <a href="<%= link_to_topic topic %>" class="me-chip mdc-chip <%= 'new' if topic.events.active.any? { |event| @user.last_sign_in_at < event.created_at } %>">
+                <%= topic.details_name.titleize %>
+                <i class="me-chip__counter"><%= topic.events.active.size %></i>
+              </a>
+            <% end %>
+          </div>
         </div>
+      <% else %>
+      <div class="me-section__description">
+        <%= current_user == @user ? 'Você' : @user.first_name %> não segue nenhum tópico ainda
       </div>
+      <% end %>
     </div>
   </section>
 
