Adjust size of covers in user followers

--- a/web/app/assets/stylesheets/components/me-user-suggestions.scss
+++ b/web/app/assets/stylesheets/components/me-user-suggestions.scss
@@ -53,6 +53,11 @@
       height: 36px;
     }
 
+    .me-user-profile__followers & {
+      width: 36px;
+      height: 36px;
+    }
+
     & img {
       width: 100%;
       height: auto;
