--- a/web/app/views/users/show.html.erb
+++ b/web/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<section class="me-page  is-animated">
+<section class="me-page is-animated">
 
   <%= notice %>
 
@@ -11,9 +11,9 @@
     <h1 class="me-user-profile__name">
       <%= @user.first_name %>
     </h1>
-    <!--    <div class="me-user-profile__persona">-->
-    <%#= @user.personas_name.join(", ") %>
-    <!--    </div>-->
+    <% if current_user == @user || current_user.admin? %>
+      <%= link_to "Editar", edit_user_path(@user) %>
+    <% end %>
     <% if current_user != @user %>
       <div class="me-user-profile__follow-button">
         <%= render partial: 'components/follow/follow_button', locals: {
@@ -22,33 +22,38 @@
         } %>
       </div>
     <% end %>
+  </div>
 
-    <% if @user.followers['users_total_followers'] > 0 %>
-      <div class="me-user-profile__follow-counter">
-        <%= @user.followers['users_total_followers'] > 1 ? "#{@user.followers['users_total_followers']} seguidores" : "#{@user.followers['users_total_followers']} seguidor" %>
-      </div>
-    <% end %>
 
-    <% if current_user == @user  %>
-      <div class="me-user-profile__followers">
-        <div class="me-user-suggestions">
-          <div class="me-user-suggestions__inner">
-            <% User.where("id IN (?)", @user.followers['users']).order("last_sign_in_at DESC").limit(10).each do |user| %>
+  <% if @user.followers['users_total_followers'] > 0 %>
+    <div class="me-section">
+      <div class="me-section__inner">
+        <div class="me-section__title me-user-profile__follow-counter">
+          <%= @user.followers['users_total_followers'] > 1 ? "#{@user.followers['users_total_followers']} seguidores" : "#{@user.followers['users_total_followers']} seguidor" %>
+        </div>
+
+        <% if current_user == @user  %>
+        <div class="me-user-profile__followers">
+          <div class="me-user-suggestions">
+            <div class="me-user-suggestions__inner">
+              <% User.where("id IN (?)", @user.followers['users']).order("last_sign_in_at DESC").limit(10).each do |user| %>
               <%= link_to user_path user do %>
-                <div class="me-user-suggestions__user">
-                  <div class="me-user-suggestions__picture" style="background-image: url('<%= user.picture %>')">
-                  </div>
-                  <div class="me-user-suggestions__name">
-                    <%= user.first_name %>
-                  </div>
+              <div class="me-user-suggestions__user">
+                <div class="me-user-suggestions__picture" style="background-image: url('<%= user.picture %>')">
                 </div>
+                <div class="me-user-suggestions__name">
+                  <%= user.first_name %>
+                </div>
+              </div>
               <% end %>
-            <% end %>
+              <% end %>
+            </div>
           </div>
         </div>
+        <% end %>
       </div>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
 
   <section class="me-section">
     <div class="me-section__inner">
