--- a/web/app/views/components/collection/_collection.html.erb
+++ b/web/app/views/components/collection/_collection.html.erb
@@ -3,7 +3,12 @@
   raise ArgumentError unless data
 
   data = {
-      collection:                  {},
+      collection:                  {
+        detail: {
+          total_events_in_collection: 0,
+          actual_events_in_collection: 0
+        }
+      },
       user:                        current_user,
       identifier:                  nil,
       total_events_in_collection:  0,
@@ -251,8 +256,7 @@
           Mostrar mais
         </div>
       <% end %>
-      <% unless data[:collection][:events] %>
-        <div class="me-card me-card--notice mdc-card mdc-card--outlined">
+        <!-- <div class="me-card me-card--notice mdc-card mdc-card--outlined">
           <div class="me-card__primary-section">
             <i class="material-icons">
               info
@@ -262,7 +266,6 @@
           <div class="me-card__secondary-section">
             Tente remover alguns filtros ou volte para a listagem completa sem filtros.
           </div>
-        </div>
-      <% end %>
+        </div> -->
     </div>
   </section>
