Add feature to upload user pícture

--- a/web/app/views/components/_user_suggestions.html.erb
+++ b/web/app/views/components/_user_suggestions.html.erb
@@ -14,7 +14,7 @@
       <% data[:following_users].each do |user| %>
         <%= link_to user_path user do %>
           <div class="me-user-suggestions__user">
-            <div class="me-user-suggestions__picture" style="background-image: url('<%= user.picture %>')">
+            <div class="me-user-suggestions__picture" style="background-image: url('<%= user.picture :small %>')">
             </div>
             <div class="me-user-suggestions__name">
               <%= user.first_name %>
