--- a/web/app/assets/stylesheets/components/me-section.scss
+++ b/web/app/assets/stylesheets/components/me-section.scss
@@ -45,7 +45,7 @@
 
   &__description {
     @include mobile-only {
-      padding: 0 12px 0 $section-padding-phone;
+      padding: 0 $section-padding-phone;
     }
   }
 
