--- a/web/app/assets/stylesheets/components/me-chip.scss
+++ b/web/app/assets/stylesheets/components/me-chip.scss
@@ -74,7 +74,9 @@
     // background: $surface-secondary-color;
     // color: $font-tertiary-color;
     @include mobile-only {
-      font-size: 8px;
+      font-size: 10px;
+      border: 1px solid $border-color;
+      background: none;
     }
 
     & a {
