Adjust social-share amp style

--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -64,6 +64,10 @@ body {
   }
 }
 
+amp-social-share.custom-style {
+    background-color: $font-tertiary-color;
+    border-radius: 6px;
+  }
 
 a {
   text-decoration: none;
