--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -35,7 +35,7 @@ $tab-bar-shadow: 0px 1px 6px 1px #00000030;
   }
 }
 
-$background-color: #f7f7f7;
+$background-color: #E6E9EC;
 $background-secondary-color: darken($background-color, 5%);;
 
 $surface-z10-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
