--- a/web/app/assets/stylesheets/components/me-section.scss
+++ b/web/app/assets/stylesheets/components/me-section.scss
@@ -17,6 +17,7 @@
     max-width: unset;
     padding: 15px 0 12px 0;
     margin: 8px auto;
+    box-shadow: 0px 0px 3px #00000029;
     //border-bottom: 5px solid $surface-tertiary-color;
   }
 
