--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -15,6 +15,13 @@
     padding: 0;
     margin: 6px 12px 35px 12px;
     min-height: 220px;
+    [data-section-disposition="horizontal"] & {
+      background: #f7f7f7;
+      margin: 12px 0 12px 0;
+      border: 0;
+      border-radius: 0;
+      box-shadow: inset 0 0 5px #00000033;
+    }
     [data-section-disposition="vertical"] & {
       margin: 6px 0 35px 0;
     }
@@ -61,7 +68,7 @@
     grid-gap: 12px;
     grid-template-columns: repeat(12, minmax(0, 1fr));
     @include mobile-only {
-      grid-template-columns: repeat(20, minmax(25vw, 1fr));
+      grid-template-columns: repeat(20, minmax(22vw, 1fr));
       overflow-x: scroll;
       padding: 0 ($section-padding-phone / 2);
       margin: 0;
