--- a/web/app/assets/stylesheets/components/me-swipable.scss
+++ b/web/app/assets/stylesheets/components/me-swipable.scss
@@ -195,10 +195,9 @@
   }
 
   & .stackedcards--animatable {
-    -webkit-transition: all 400ms ease;
-    -o-transition: all 400ms ease;
     transition: all 400ms ease;
     will-change: opacity, transform;
+    min-height: 200px;
   }
 
   & .stackedcards-overlay {
@@ -382,8 +381,16 @@
     transition: opacity 0.4s linear;
     text-align: center;
     max-width: 300px;
+    background: $border-color;
+    border-radius: 6px;
+    height: 350px;
+    align-items: center;
     opacity: 0;
     display: none;
+    & h2 {
+      font-family: $font-secondary-family;
+      padding: 0 15px;
+    }
   }
 
   & .mdc-button__icon {
