--- a/web/app/views/components/collection/_similar.html.erb
+++ b/web/app/views/components/collection/_similar.html.erb
@@ -40,11 +40,11 @@
                      json_request:    data[:json_request]
                  } %>
 
-      <% if similar_events.length < data[:units_to_display] %>
-        <div class="me-similar__empty">
+      <%# if similar_events.length < data[:units_to_display] %>
+        <!-- <div class="me-similar__empty">
           <span>Estes são todos os eventos similares que encontrei.</span>
-        </div>
-      <% end %>
+        </div> -->
+      <%# end %>
     </div>
 
     <h3 class="me-similar__topics">
