--- a/web/app/views/components/swipable/_swipable.html.erb
+++ b/web/app/views/components/swipable/_swipable.html.erb
@@ -9,10 +9,10 @@
 
   <div class="me-swipable__items"
        data-target="swipable.items">
-    <div class="me-swipable__question">
+    <!-- <div class="me-swipable__question"> -->
       <!-- <h2>Você iria neste evento?</h2>
       <span>Indique abaixo os eventos que você iria ou não para já receber sugestões que tem a ver com seu gosto</span> -->
-    </div>
+    <!-- </div> -->
     <div id="stacked-cards-block" class="stackedcards stackedcards--animatable init">
       <div class="stackedcards-container">
         <% @swipable_items.each do |item| %>
