--- a/web/app/assets/stylesheets/components/me-event-single.scss
+++ b/web/app/assets/stylesheets/components/me-event-single.scss
@@ -144,14 +144,15 @@
     overflow: hidden;
     box-shadow: 0 1px 12px rgba(0, 0, 0, 0.25);
     @include mobile-only {
-      top: 16px;
-      right: 16px
+      bottom: -20px;
+      right: 21px;
+      top: auto;
     }
 
     & .me-icon-button.mdc-icon-button {
       background: $surface-color;
       transition: 0.2s all ease 0s;
-      @include mdc-icon-button-icon-size($width: 24px, $height: 24px, $padding: 10px);
+      @include mdc-icon-button-icon-size($width: 28px, $height: 28px, $padding: 12px);
 
       & svg {
         fill: lighten($font-tertiary-color, 30%);
